--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,111 +12,166 @@
         <h1>Interactive Data Visualization Dashboard</h1>
     </header>
 
-    <!-- Bento Grid for Charts -->
     <div class="chart-grid">
-        <!-- Bar Chart Container -->
         <div class="chart-container">
             <canvas id="barChart"></canvas>
-            <p class="chart-metadata">Bar Chart: Comparing sales data for different products.</p>
+            <p class="chart-metadata">Bar Chart: Dynamic product sales data.</p>
         </div>
-
-        <!-- Pie Chart Container -->
         <div class="chart-container">
             <canvas id="pieChart"></canvas>
-            <p class="chart-metadata">Pie Chart: Market share distribution of companies.</p>
+            <p class="chart-metadata">Pie Chart: Company market share.</p>
         </div>
-
-        <!-- Line Chart Container -->
         <div class="chart-container">
             <canvas id="lineChart"></canvas>
-            <p class="chart-metadata">Line Graph: Sales trends over the first quarter of the year.</p>
+            <p class="chart-metadata">Line Graph: Daily sales trends.</p>
         </div>
-
-        <!-- Scatter Plot Container -->
         <div class="chart-container">
             <canvas id="scatterPlot"></canvas>
-            <p class="chart-metadata">Scatter Plot: Relationship between advertising budget and sales performance.</p>
+            <p class="chart-metadata">Scatter Plot: Ad spend vs sales relationship.</p>
         </div>
     </div>
 
     <script>
-        // Bar Chart
-        const barCtx = document.getElementById('barChart').getContext('2d');
-        const barChart = new Chart(barCtx, {
-            type: 'bar',
-            data: {
-                labels: ['Product A', 'Product B', 'Product C', 'Product D', 'Product E'],
-                datasets: [{
-                    label: 'Sales (in units)',
-                    data: [12, 19, 3, 5, 10],
-                    backgroundColor: ['red', 'blue', 'green', 'purple', 'orange'],
-                }]
-            }
-        });
+        let barChart;
+        let pieChart;
+        let lineChart;
+        let scatterPlot;
 
-        // Pie Chart
-        const pieCtx = document.getElementById('pieChart').getContext('2d');
-        const pieChart = new Chart(pieCtx, {
-            type: 'pie',
-            data: {
-                labels: ['Company A', 'Company B', 'Company C', 'Company D'],
-                datasets: [{
-                    data: [30, 40, 20, 10],
-                    backgroundColor: ['yellow', 'orange', 'purple', 'blue']
-                }]
-            }
-        });
+        document.addEventListener('DOMContentLoaded', () => {
+            const barCanvas = document.getElementById('barChart');
+            const pieCanvas = document.getElementById('pieChart');
+            const lineCanvas = document.getElementById('lineChart');
+            const scatterCanvas = document.getElementById('scatterPlot');
 
-        // Line Graph
-        const lineCtx = document.getElementById('lineChart').getContext('2d');
-        const lineChart = new Chart(lineCtx, {
-            type: 'line',
-            data: {
-                labels: ['January', 'February', 'March', 'April'],
-                datasets: [{
-                    label: 'Monthly Sales (in units)',
-                    data: [3, 10, 7, 15],
-                    borderColor: 'blue',
-                    fill: false
-                }]
-            }
-        });
-
-        // Scatter Plot
-        const scatterCtx = document.getElementById('scatterPlot').getContext('2d');
-        const scatterPlot = new Chart(scatterCtx, {
-            type: 'scatter',
-            data: {
-                datasets: [{
-                    label: 'Ad Spend vs Sales',
-                    data: [
-                        { x: 500, y: 1000 },
-                        { x: 1000, y: 2500 },
-                        { x: 1500, y: 2700 },
-                        { x: 2000, y: 3200 },
-                    ],
-                    backgroundColor: 'red'
-                }]
-            },
-            options: {
-                scales: {
-                    x: {
-                        type: 'linear',
-                        position: 'bottom',
-                        title: {
-                            display: true,
-                            text: 'Ad Spend (in $)',
-                        }
-                    },
-                    y: {
-                        title: {
-                            display: true,
-                            text: 'Sales (in units)'
+            barChart = new Chart(barCanvas, {
+                type: 'bar',
+                data: {
+                    labels: ['Product A', 'Product B', 'Product C', 'Product D', 'Product E'],
+                    datasets: [{
+                        label: 'Sales (in units)',
+                        data: [12, 19, 3, 5, 10],
+                        backgroundColor: ['red', 'blue', 'green', 'purple', 'orange'],
+                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true
                         }
                     }
                 }
-            }
+            });
+
+            pieChart = new Chart(pieCanvas, {
+                type: 'pie',
+                data: {
+                    labels: ['Company A', 'Company B', 'Company C', 'Company D'],
+                    datasets: [{
+                        data: [30, 40, 20, 10],
+                        backgroundColor: ['yellow', 'orange', 'purple', 'blue']
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    plugins: {
+                        title: {
+                            display: true,
+                            text: 'Company Market Share'
+                        }
+                    }
+                }
+            });
+
+            lineChart = new Chart(lineCanvas, {
+                type: 'line',
+                data: {
+                    labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun'],
+                    datasets: [{
+                        label: 'Daily Sales (in units)',
+                        data: [3, 10, 5, 2, 20, 30],
+                        borderColor: 'blue',
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                }
+            });
+
+            scatterPlot = new Chart(scatterCanvas, {
+                type: 'scatter',
+                data: {
+                    datasets: [{
+                        label: 'Ad Spend vs Sales',
+                        data: [
+                            { x: 500, y: 1000 },
+                            { x: 1000, y: 2500 },
+                            { x: 1500, y: 2700 },
+                            { x: 2000, y: 3200 }
+                        ],
+                        backgroundColor: 'red'
+                    }]
+                },
+                options: {
+                    scales: {
+                        x: {
+                            type: 'linear',
+                            position: 'bottom',
+                            title: {
+                                display: true,
+                                text: 'Ad Spend (in $)'
+                            }
+                        },
+                        y: {
+                            title: {
+                                display: true,
+                                text: 'Sales (in units)'
+                            }
+                        }
+                    }
+                }
+            });
+
+            setInterval(updateChartData, 2000); // Update every 2 seconds
         });
+
+        function updateChartData() {
+            const now = new Date();
+            const seconds = now.getSeconds();
+
+            // Bar Chart
+            barChart.data.datasets[0].data = getIncrementalData(seconds);
+            barChart.update();
+
+            // Pie Chart
+            pieChart.data.datasets[0].data = pieChart.data.datasets[0].data.map(value => Math.min(100, value + 1));
+            pieChart.update();
+
+            // Line Chart
+            lineChart.data.datasets[0].data = lineChart.data.datasets[0].data.map(value => value + 0.5);
+            lineChart.update();
+
+            // Scatter Plot
+            scatterPlot.data.datasets[0].data = scatterPlot.data.datasets[0].data.map(point => ({
+                x: point.x,
+                y: Math.min(3000, point.y + 50)
+            }));
+            scatterPlot.update();
+        }
+
+        function getIncrementalData(seconds) {
+            return [
+                Math.max(0, 12 + seconds % 6),
+                Math.max(0, 19 + seconds % 6),
+                Math.max(0, 3 + 2 * (seconds % 6)),
+                Math.max(0, 5 - seconds % 6),
+                Math.max(0, 10 + 3 * (seconds % 6))
+            ];
+        }
     </script>
 </body>
 </html>
