HEY NEW DEFINITIUO NS

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,60 @@
     </div>
 </div>
 
+<section class="cheat-sheet">
+    <h2>Prescriptive Analytics</h2>
+    <div class="cheat-grid">
+
+        <!-- Definition -->
+        <div class="card">
+            <h3>What is Prescriptive Analytics?</h3>
+            <p>Prescriptive analytics goes beyond descriptive and predictive analytics by recommending specific actions based on data analysis to achieve desired outcomes.</p>
+        </div>
+
+        <!-- Key Components -->
+        <div class="card">
+            <h3>Key Components</h3>
+            <ul>
+                <li><b>Optimization:</b> Finding the best solution under given constraints (e.g., resource allocation).</li>
+                <li><b>Simulation:</b> Testing "what-if" scenarios to understand the impact of potential decisions.</li>
+                <li><b>Decision Modeling:</b> Using models to analyze and recommend the best course of action.</li>
+            </ul>
+        </div>
+
+        <!-- Applications -->
+        <div class="card">
+            <h3>Applications</h3>
+            <ul>
+                <li>Optimizing supply chain processes to reduce costs.</li>
+                <li>Improving marketing strategies based on customer behavior.</li>
+                <li>Enhancing resource management and workforce planning.</li>
+                <li>Recommending investment portfolios in financial services.</li>
+            </ul>
+        </div>
+
+        <!-- Benefits -->
+        <div class="card">
+            <h3>Benefits</h3>
+            <ul>
+                <li>Enables data-driven decision-making.</li>
+                <li>Identifies optimal solutions for complex problems.</li>
+                <li>Improves operational efficiency and reduces costs.</li>
+                <li>Provides actionable insights for proactive business strategies.</li>
+            </ul>
+        </div>
+    </div>
+</section>
+<div class="card">
+    <h3>Potential Issues in Data Collection</h3>
+    <ul>
+        <li><b>Data Quality:</b> Collected data may be incomplete, inconsistent, or inaccurate, affecting decision outcomes.</li>
+        <li><b>Bias in Data:</b> Sampling or measurement biases can lead to misleading results.</li>
+        <li><b>High Costs:</b> Data collection processes can be expensive and time-consuming.</li>
+        <li><b>Security Concerns:</b> Collecting sensitive data may expose organizations to privacy and security risks.</li>
+    </ul>
+</div>
+
+
     
         <section class="cheat-sheet">
             <h2>Business Intelligence Cheat Sheet</h2>
@@ -61,6 +115,8 @@
                         <li><b>Data Integration:</b> Combines data from multiple sources for a unified view.</li>
                         <li><b>Metadata:</b> Data about data, describing structure and usage.</li>
                         <li><b>Business Report:</b> Structured document with insights for decision-making.</li>
+                        <li><b>Modeling:</b> The process of creating a simplified representation of a system, phenomenon, or problem to analyze and solve it effectively.</li>
+                        <li><b>Decision-Making:</b> The process of selecting the best alternative among various options to achieve a specific goal.</li>
                     </ul>
                 </div>
         
